# AutoCar

./: README.md  package.xml  setup.py
car_interface/: CMakeLists.txt  package.xml
install/: local_setup.sh
install/ros2_term_project/share/ros2_term_project/: package.sh
install/ros2_term_project/share/ros2_term_project/launch/: car_sim.launch.py
ros2_term_project/: package.xml  setup.py
ros2_term_project/install/: setup.sh
ros2_term_project/launch/: car_sim.launch.py
ros2_term_project/models/: moving_box.config  moving_box.sdf
ros2_term_project/models/prius_hybrid_custom/: model.sdf  model1.sdf  model2.sdf
ros2_term_project/plugins/: CMakeLists.txt  MovingBoxPlugin.cpp
ros2_term_project/ros2_term_project/: car_publisher.py  car_subscriber.py  line_follower.py  line_tracker.py  state.py  stop_line_tracker.py
ros2_term_project/test/: spawn_car.py
ros2_term_project/worlds/: car_track.world  hill.material  hill2.material  hillline.material  stopline.material
worlds/: car_track.world  test_car_track.world
